# project-carrier

./: .gitignore  README.md  pyproject.toml  requirements.txt
account/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/static/css/: login.css
account/templates/: base_login.html
account/templates/email/: account_activation_email.html  account_reset_password.html
account/templates/registration/: login.html  registration_form.html
app/: settings.py  urls.py
core/: admin.py  models.py  resources.py  services.py  urls.py  views.py
core/fixtures/: vehicles.json
core/migrations/: 0001_initial.py  0002_transportcalculation.py
core/static/css/: styles.css
core/static/js/: scripts.js
core/templates/: base.html
core/templates/core/: calculate_cost.html  calculation_list.html  import_vehicles.html  vehicle_list.html
core/tests/: test_cost_calculation.py  test_transport_caculation.py  test_vehicles.py
